--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 </a> 
             </li>
             <li class="social-list-item">
-                <a class="social-list-link" href="https://freecodecamp.org/" target="_blank">
+                <a class="social-list-link" href="https://www.freecodecamp.org/eshjay" target="_blank">
                     <i class="fab fa-free-code-camp"></i>
                 </a> 
             </li>
