footer nav added

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I will develop beautiful and outstanding website for your business and deliver within 7days" />
+    <meta name="description" content="I solve complex problems, develop creative ideas, process and provide distinct solutions. I develop beautiful and outstanding website for businesses and deliver within 7 days" />
 	<meta name="keywords" content="Front-End Developer Website-developer Designer Software Progammer UI/UX SEO" />
 	<meta name="author" content="Olushola Abiodun" />
 
     <!-- https://fallacious-punishment.surge.sh/ -->
   <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Olushola Professional Front-End Developer | Lagos, Nigeria"/>
+	<meta property="og:title" content="Olushola  Front-End Developer | Lagos, Nigeria"/>
 	<meta property="og:image" content="https://res.cloudinary.com/dlqceb87c/image/upload/v1595032845/olushola.dev.png"/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content="Olushola Abiodun Professional Web Developer Software Engineer"/>
-	<meta property="og:description" content="I will develop beautiful and outstanding website for your business and deliver within 7days"/>
-	<meta name="twitter:title" content="Olushola Professional Front-End Developer | Lagos, Nigeria" />
+	<meta property="og:url" content="https://olushola.netlify.com"/>
+	<meta property="og:site_name" content="Olushola Abiodun  Web Developer Software Engineer"/>
+	<meta property="og:description" content="I solve complex problems, develop creative ideas, process and provide distinct solutions. I develop beautiful and outstanding website for businesses and deliver within 7 days"/>
+	<meta name="twitter:title" content="Olushola Front-End Developer | Lagos, Nigeria" />
 	<meta name="twitter:image" content="https://res.cloudinary.com/dlqceb87c/image/upload/v1595032845/olushola.dev.png" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="twitter:url" content="https://olushola.netlify.com" />
+	<meta name="twitter:card" content="I solve complex problems, develop creative ideas, process and provide distinct solutions. I develop beautiful and outstanding website for businesses and deliver within 7 days" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.ico">
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./css/fontawesome-free-5.13.0-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;600&family=Fira+Sans+Condensed:wght@400;700&display=swap" rel="stylesheet"> 
-    <title> Olushola Professional Front-End Developer | Lagos, Nigeria</title>
+    <title> Olushola Front-End Developer | Lagos, Nigeria</title>
 </head>
 <body>
     <!-- Header -->
@@ -64,29 +64,29 @@
             <div class="service service-text animate-box fadeInUp animated " data-animate-effect="fadeInUp">
                     <h1><i class="fab fa-html5 service-brand"></i></h1>
                     <h3>Web Design + Developement</h3>
-                    <p>I will design and develop 1 page website for small business</p>
-                    <p>I will create stylish mini-ecommerce website for mini-exporters</p>
-                    <p>I will help businesses get more customers and establish their online presence</p>
+                    <p>I design and develop 1 page website for small businesses</p>
+                    <p>I create stylish mini-ecommerce website for mini-exporters</p>
+                    <p>I help businesses get more customers and establish their online presence</p>
             </div>
             <div class="service service-text animate-box fadeInDown animated" data-animate-effect="fadeInDown">
                 <h1><i class="fa fa-cart-arrow-down service-brand"></i></h1>
                 <h3>E-Commerce</h3>
-                <p>I will design and develop an outstanding fast e-commerce website for your business and increase your sales accordingly</p>
-                <p>I will make your product rank higer on search engine and make customers to always come back to your store for their needs</p>
+                <p>I design and develop an outstanding fast e-commerce website for businesses and increase their sales accordingly</p>
+                <p>I make products rank higher on search engines and make customers always come back to your store for their needs</p>
             </div>
             <div class="service service-text animate-box fadeInUp animated" data-animate-effect="fadeInUp">
                 <h1><i class="fab fa-react service-brand"></i></h1>
-                <h3>ReactJs</h3>
+                <h3>React.Js</h3>
                 <p>
-                    I will create incredible react web/mobile application for your products
-                    and services!
+                    I create incredible react web/mobile application for products
+                    and services.
                 </p>
                 <p>
-                    Solid Knowlegde and experience in programming mobile first react applications
+                    I have solid Knowlegde and experience in programming mobile first react applications.
                 </p>
             </div>
         </div>
-        <a href="#my-work" class="btn animate-box bounceInDown animated" data-animate-effect="bounceInDown">My Work</a>
+        <a href="#my-work" class="btn animate-box bounceInDown animated" data-animate-effect="bounceInDown">My Works</a>
     </section>
 
 
@@ -100,9 +100,9 @@
         </p>
 
         <div class="about-me-body">
-            <p>I have ability to solve complex problems, develop creative ideals, process and provide distinct solution.</p>
-            <p>I will translate designs to front-end code and determine developer requirements</p>
-            <p>I will build beautiful and outstanding website for your business and deliver within 7days</p>
+            <p>I solve complex problems, develop creative ideas, process and provide distinct solutions.</p>
+            <p>I translate designs to front-end code and determine developer requirements</p>
+            <p>I build beautiful and outstanding website for businesses and deliver within 7 days</p>
         </div>
         <img src="./img/shola-lab.jpg" alt="abiodun olushola" class="about-me-img">
     </section>
@@ -299,6 +299,26 @@
                 </a> 
             </li>
         </ul>
+
+        <aside class="footer-nav">
+            <ul class="footer-nav-list">
+                <li class="footer-nav-item" id="footer-nav-item-one">
+                    <a class="footer-nav-link footer-nav-link-one" href="#home">
+                        <i class="fa fa-arrow-up"></i>
+                    </a>
+                </li>
+                <!-- <li class="footer-nav-item" id="footer-nav-item-two">
+                    <a class="footer-nav-link footer-nav-link-two" href="#about-me">
+                        <i class="fa fa-arrow-up"></i>
+                    </a>
+                </li>
+                <li class="footer-nav-item" id="footer-nav-item-three">
+                    <a class="footer-nav-link footer-nav-link-three" href="#home">
+                        <i class="fa fa-arrow-up"></i>
+                    </a>
+                </li> -->
+            </ul>
+        </aside>
     </footer>
 
 
