--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>I translate designs to front-end code and determine developer requirements</p>
             <p>I build beautiful and outstanding website for businesses and deliver within 7 days</p>
         </div>
-        <img src="./img/shola-lab.jpg" alt="abiodun olushola" class="about-me-img">
+        <img src="./img/shola-lab.png" alt="abiodun olushola" class="about-me-img">
     </section>
 
     <!-- My Work -->
@@ -136,7 +136,7 @@
                         </li>
                     </ul>
                     <p>Status: <strong id="typing">completed</strong></p>
-                    <p><a class="btn2" href="#" target="_blank">See Demo</a></p>
+                    <p><a class="btn2" href="https://renovour.surge.sh" target="_blank">See Demo</a></p>
                   </div>
                 </div>
               </div>
