New project updated

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <h4 class="section-subtitle-work">This is the list of my completed, current and upcoming projects</h4>
         
         <div class="portfolio">
+        <div>
             <div class="flip-card">
                 <div class="inner">
                   <div class="front">
@@ -136,10 +137,29 @@
                         </li>
                     </ul>
                     <p>Status: <strong id="typing">completed</strong></p>
-                    <p><a class="btn2" href="https://renovour.surge.sh" target="_blank">See Demo</a></p>
+                <p><a class="btn2" href="https://renovour.surge.sh" target="_blank">Visit</a></p>
                   </div>
                 </div>
-              </div>
+            </div>
+                <div>
+                <!-- <button class='modal-btn btn3'>Details</button> -->
+                <div class="modal-overlay">
+                    <div class="modal-container">
+                      <h3>modal content</h3>
+                      <button class="close-btn"><i class="fas fa-times"></i></button>
+                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum sapiente iusto blanditiis,
+                         dolores voluptas laboriosam ratione excepturi, fuga 
+                        deserunt corporis nam ducimus distinctio sequi nobis? Quidem modi animi fugiat fugit. </p>
+                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum sapiente iusto blanditiis,
+                         dolores voluptas laboriosam ratione excepturi, fuga 
+                        deserunt corporis nam ducimus distinctio sequi nobis? Quidem modi animi fugiat fugit. </p>
+                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum sapiente iusto blanditiis,
+                         dolores voluptas laboriosam ratione excepturi, fuga 
+                        deserunt corporis nam ducimus distinctio sequi nobis? Quidem modi animi fugiat fugit. </p>
+                    </div>
+                  </div>
+                </div>
+        </div>
               <div class="flip-card">
                 <div class="inner">
                   <div class="front">
@@ -151,9 +171,6 @@
                     <ul class="tool-used">
                         <li class="tool-item">
                            <i class="fab fa-js-square"></i>
-                        </li>
-                        <li class="tool-item">
-                                <i class="fab fa-html5"></i>
                         </li>
                         <li class="tool-item">
                                 <i class="fab fa-css3"></i>
@@ -221,17 +238,14 @@
               <div class="flip-card">
                 <div class="inner">
                   <div class="front">
-                    <img src="./img/project5.png" alt="Daily Dev Tips" style="width:auto;height:300px;" />
+                    <img src="./img/adviser2.png" alt="Adviser front page picture" style="width:auto;height:300px;" />
                   </div>
                   <div class="back">
-                    <h4>Playest</h4>
+                    <h4>Adviser</h4>
                     <p>Tools used:</p>
                     <ul class="tool-used">
                         <li class="tool-item">
                            <i class="fab fa-js-square"></i>
-                        </li>
-                        <li class="tool-item">
-                                <i class="fab fa-spotify"></i>
                         </li>
                         <li class="tool-item">
                                 <i class="fab fa-css3"></i>
@@ -240,8 +254,8 @@
                                 <i class="fab fa-react"></i>
                         </li>
                     </ul>
-                    <p><strong>Status:</strong> In progress</p>
-                    <!-- <p><a class="btn" href="#" target="_blank">See Details</a></p> -->
+                    <p><strong>Status: </strong> Completed</p>
+                    <p><a class="btn2" href="https://advise.netlify.app" target="_blank">Visit</a></p>
                   </div>
                 </div>
               </div>
