--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                                 <i class="fab fa-bootstrap"></i>
                         </li>
                     </ul>
-                    <p>Status: <strong id="typing">In progress</strong></p>
-                    <!-- <p><a class="btn" href="#" target="_blank">See Demo</a></p> -->
+                    <p>Status: <strong id="typing">Completed</strong></p>
+                    <p><a class="btn2" href="https://yep.com.ng" target="_blank">Visit</a></p>
                   </div>
                 </div>
               </div>
