--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 
     <!-- Introduction -->
     <section class="intro" id="home">
-        <h1 class="section-title section-title-intro animate-box  fadeInLeft animated" data-animate-effect="fadeInLeft">
-            Bawo ni, I am <strong>Olushola Abiodun</strong>
+        <h1 class="section-title section-title-intro animate-box  fadeInLeft animated" data-animate-effect="fadeInLeft"> 
+            <a href="" class="typewrite" data-period="2000" data-type='["Hello, ", "Bawo ni, ", "Bonjour, ","Guten tag, ", "Namaste, ", "Salve, ", "Hola, " , "Nde-ewo, " , "Shalom, " ]'>
+                <span class="wrap"></span>
+            </a>
+            I am <strong>Olushola Abiodun</strong>
         </h1>
         <p class="section-subtitle section-subtitle-intro animate-box fadeInRight animated"  data-animate-effect="fadeInRight">Front-End Dev</p>
         <img src="./img/shola2.jpg" alt="a picture of Abiodun Olushola" class="intro-img animate-box bounceInDown animated" data-animate-effect="bounceInDown">
