Updated my linked in link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         </li>
                     </ul>
                     <p><strong>Status:</strong> Completed</p>
-                    <p><a class="btn2" href="https://edulinkspeechworld.com.ng" target="_blank">Visit</a></p>
+                    <p><a class="btn2" href="#" target="_blank">Visit</a></p>
                   </div>
                 </div>
               </div>
@@ -311,7 +311,7 @@
                 </a> 
             </li>
             <li class="social-list-item">
-                <a class="social-list-link" href="https://linkedin.com/in/abiodun2050" target="_blank">
+                <a class="social-list-link" href="https://linkedin.com/in/abiodun-olushola" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a> 
             </li>
